samples/_failures_safe/1761288349_d9f134_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30044795.c: In function ‘main’:
./samples/SAFE/__tmp_30044795.c:134:24: error: expected ‘)’ at end of input
  134 |         else if (choice
      |                 ~      ^
      |                        )
./samples/SAFE/__tmp_30044795.c:134:9: error: expected declaration or statement at end of input
  134 |         else if (choice
      |         ^~~~
./samples/SAFE/__tmp_30044795.c:134:9: error: expected declaration or statement at end of input
